# ai-testing-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  doc.md  pyproject.toml  qa_thresholds.py  vercel.json
.claude/: settings.json
.claude/agents/: ai-expert.md  ci-doctor.md  content-sync.md  golden-generator.md  module-creator.md  qa-ai-expert.md  release-manager.md  ux-site.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  evals.yml  promptfoo.yml  redteam-nightly.yml
audits/: auditoria_repo_vs_manual_v13.md
demos/rasa-intent-bot/: Dockerfile  README.md
demos/simple-rag/: Dockerfile  README.md  app.py  generator.py  requirements.txt  retriever.py
demos/streamlit-chat/: Dockerfile  README.md
demos/vulnerable-bot/: Dockerfile  README.md
docker/: compose.yml
docs/: 00-introduccion.md  01-fundamentos-qa-ia.md  02-tipos-de-testing.md  03-metricas.md  04-frameworks-oss.md  05-plataformas-comerciales.md  06-red-teaming-y-owasp.md  07-chatbots-tradicionales.md  08-ci-cd.md  09-playwright-ui.md  10-benchmarks-y-datasets.md  11-buenas-practicas.md  12-tendencias.md  glosario.md  manual-completo.md  ruta-aprendizaje.md
docs/superpowers/plans/: 2026-04-24-batch1-evaluation-modules.md  2026-04-24-batch2-security-modules.md  2026-04-24-batch3-infra-modules.md  2026-04-29-ux-site-redesign.md  2026-04-30-content-improvement.md
docs/superpowers/specs/: 2026-04-24-implement-remaining-modules-design.md  2026-04-29-ux-site-redesign-design.md  2026-04-30-content-improvement-design.md
exercises/: README.md
exercises/solutions/: 02-ragas-basics-solution.py  03-llm-as-judge-solution.py  04-multi-turn-solution.py  05-prompt-regression-solution.py  06-hallucination-lab-solution.py  07-redteam-garak-solution.py  08-redteam-deepteam-solution.py  09-guardrails-solution.py  10-agent-testing-solution.py  11-playwright-streaming-solution.py  12-observability-solution.py  13-drift-monitoring-solution.py  15-cost-aware-qa-solution.py  16-retrieval-advanced-solution.py  17-chatbot-testing-solution.py  18-robustness-suite-solution.py  19-hitl-iaa-solution.py  20-end-to-end-case-solution.py  README.md
goldens/: README.md
goldens/01-primer-eval/: qa_golden.jsonl
goldens/02-ragas-basics/: qa_golden.jsonl
goldens/03-llm-as-judge/: judge_cases.jsonl
goldens/04-multi-turn/: conversations.jsonl
goldens/05-prompt-regression/: prompt_versions.jsonl
goldens/06-hallucination-lab/: claims.jsonl
goldens/07-redteam-garak/: attack_cases.jsonl
goldens/08-redteam-deepteam/: owasp_cases.jsonl
goldens/09-guardrails/: pii_cases.jsonl
goldens/10-agent-testing/: agent_tasks.jsonl
goldens/11-playwright-streaming/: playwright_cases.jsonl
goldens/12-observability/: trace_records.jsonl
goldens/13-drift-monitoring/: score_distributions.jsonl
goldens/14-embedding-eval/: retrieval_queries.jsonl
goldens/15-cost-aware-qa/: README.md  cost_records.jsonl
goldens/16-retrieval-advanced/: README.md  corpus.json  queries.jsonl
modules/01-primer-eval/: README.md  conftest.py  requirements.md
modules/01-primer-eval/src/: eval_antipatterns.py  metrics.py  simple_rag.py  threshold_checker.py
modules/01-primer-eval/tests/: conftest.py  test_antipatterns.py  test_first_eval.py
modules/02-ragas-basics/: README.md  requirements.md
modules/02-ragas-basics/src/: rag_pipeline.py  ragas_evaluator.py
modules/02-ragas-basics/tests/: conftest.py  test_ragas_metrics.py
modules/03-llm-as-judge/: README.md  requirements.md
modules/03-llm-as-judge/src/: dag_metric.py  geval_judge.py  judge_bias.py
modules/03-llm-as-judge/tests/: conftest.py  test_judges.py
modules/04-multi-turn/: README.md  requirements.md
modules/04-multi-turn/src/: conversation.py  multi_turn_metrics.py  multi_turn_rag.py
modules/04-multi-turn/tests/: conftest.py  test_multi_turn.py
modules/05-prompt-regression/: README.md  promptfooconfig.yaml  requirements.md
modules/05-prompt-regression/src/: ci_gate_pipeline.py  prompt_registry.py  regression_checker.py  variance_evaluator.py
modules/05-prompt-regression/tests/: conftest.py  test_ci_gate_pipeline.py  test_regression.py
modules/06-hallucination-lab/: README.md  requirements.md
modules/06-hallucination-lab/src/: claim_extractor.py  groundedness_checker.py  hallucination_types.py
modules/07-redteam-garak/: README.md  requirements.md
modules/08-redteam-deepteam/: README.md  requirements.md
modules/09-guardrails/: README.md  conftest.py  requirements.md
modules/10-agent-testing/: README.md  requirements.md
modules/11-playwright-streaming/: README.md  requirements.md
modules/12-observability/: README.md  requirements.md
modules/13-drift-monitoring/: README.md  requirements.md
modules/14-embedding-eval/: README.md  conftest.py  requirements.md
modules/15-cost-aware-qa/: README.md  conftest.py  requirements.md
modules/16-retrieval-advanced/: README.md  conftest.py  requirements.md
modules/17-chatbot-testing/: README.md  conftest.py
modules/18-robustness-suite/: README.md  conftest.py
modules/19-hitl-iaa/: README.md  conftest.py  requirements.md
modules/20-end-to-end-case/: README.md  conftest.py
scripts/: README.md  expand_old_goldens.py  generate_goldens_15_16.py
site/: index.md  indice.md  package-lock.json  package.json  referencias.md
site/.vitepress/: config.ts
site/guia/: conceptos.md  index.md  instalacion.md  madurez.md  marco-normativo.md  metricas.md  observabilidad.md  red-teaming.md  reproducibilidad.md  ruta.md  umbrales.md
site/modulos/: 01-primer-eval.md  02-ragas-basics.md  03-llm-as-judge.md  04-multi-turn.md  05-prompt-regression.md  06-hallucination-lab.md  07-redteam-garak.md  08-redteam-deepteam.md  09-guardrails.md  10-agent-testing.md  11-playwright-streaming.md  12-observability.md  13-drift-monitoring.md  14-embedding-eval.md  15-cost-aware-qa.md  16-retrieval-advanced.md  17-chatbot-testing.md  18-robustness-suite.md  19-hitl-iaa.md  20-end-to-end-case.md  index.md
site/public/: robots.txt
site/quiz/: index.md
(+125 files in other folders)
